<resources>
    <string name="app_name">"18master"</string>
    <string name="name_tese">"特色频道"</string>
    <string name="name_nong">"农家乐"</string>
    <string name="name_jia">"吃喝玩乐要啥有啥"</string>
    <string name="name_ding">"订饭店"</string>
    <string name="name_ding2">"订酒店"</string>
    <string name="name_shang">"商品众筹"</string>
    <string name="name_yi">"一元云购"</string>
    <string name="name_fan">"不排队，提前订座"</string>
    <string name="name_fan2">"精选同城优质房源"</string>
    <string name="name_ping">"众筹的方式实现心愿"</string>
    <string name="name_yuan">"爆款大牌随心购"</string>
    <string name="name_home">"首页"</string>
    <string name="name_shop">"抢购"</string>
    <string name="name_focus">"关注"</string>
    <string name="name_my">"我的"</string>
    <string name="name_more">"更多"</string>
    <string name="name_shequ">"我的社区服务"</string>
    <string name="home_xsqg">限时抢购</string>
    <string name="home_xsxl">限时限量>></string>
    <string name="toolbar_text">输入商户名/搜索词</string>
    <string name="toolbar_qiandao">签到</string>
    <string name="city_name">城市名称</string>
    <string name="home_xsqg_text">宽大摄影</string>
    <string name="home_xsqg_qian">¥888</string>
    <string name="home_xsqg_yjia">¥988</string>
    <string name="home_rmsj">热门商家</string>
    <string name="home_gdsj">更多商家>></string>
    <string name="my_list_wdqgj">我的抢购卷</string>
    <string name="hs0">0</string>
    <string name="tuichu">退出当前账号</string>
    <string name="zhanghuxx">账户信息</string>
    <string name="touxiang">头像</string>
    <string name="yonghunc">用户昵称</string>
    <string name="jibenshezhi">基本设置</string>
    <string name="dizhi">地址</string>
    <string name="zhanghusz">账户设置</string>
    <string name="shouji">手机</string>
    <string name="weixi">微信</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="anquanshezhi">安全设置</string>
    <string name="mima">密码</string>
    <string name="my_wdqgj">我的抢购卷</string>
    <string name="my_wdyhj">我的优惠卷</string>
    <string name="my_wdzc">我的众筹</string>
    <string name="my_wdhd">我的活动</string>
    <string name="my_wdsc">我的收藏</string>
    <string name="my_yhmd">优惠买单</string>
    <string name="my_wdyy">我的预约</string>
    <string name="my_wdshxx">我的生活信息</string>
    <string name="my_qmjjr">全民经纪人</string>
    <string name="my_jfdh">积分兑换</string>
    <string name="my_wdkd">我的快递</string>
    <string name="my_txsq">提现申请</string>
    <string name="my_xxzx">消息中心</string>
    <string name="my_wdxx">我的消息</string>
    <string name="my_titles">我的</string>
    <string name="my_dengl">未登录</string>
    <string name="my_denglsj">未登录</string>
    <string name="my_wdjf_titles">67分</string>
    <string name="my_wdye_titles">0元</string>
    <string name="my_wdjf">我的积分</string>
    <string name="my_wdye">我的余额</string>
    <string name="my_wdcz">冻结金=>充值</string>
    <string name="my_wdqgs">我的抢购</string>
    <string name="my_wdgw">我的购物</string>
    <string name="my_wddc">我的订餐</string>
    <string name="my_wddz">我的订座</string>
    <string name="my_wdyg">我的云购</string>
    <string name="my_jdyy">酒店预约</string>
    <string name="str_login_title">登录</string>
    <string name="str_login_register">注册</string>
    <string name="str_edit_username">手机/邮箱/用户名</string>
    <string name="str_edit_password">密码</string>
    <string name="str_find_password">找回密码</string>
    <string name="str_quick_login">手机号快捷登陆</string>
    <string name="str_input_phone_num">1输入手机号</string>
    <string name="str_input_code">2输入验证码</string>
    <string name="str_set_pasword">3设置密码</string>
    <string name="str_edit_input_phone_num">请输入手机号</string>
    <string name="str_send_code">发送验证码</string>
    <string name="str_read_agree">我已阅读并同意</string>
    <string name="username_pwd_rule">用户名或密码</string>
    <string name="OK">确定</string>
    <string name="title_register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="pwd_again">确认密码</string>
    <string name="register">注册</string>
    <string name="password_rules">密码以数字或字母开头，长度在6~18之间，只能包含字符、数字和下划线</string>
    <string name="username_rules">账号为中文，字母或数字，长度为4~20，一个中文算2个长度</string>
    <string name="username_equal_pwd">两次输入的密码不同！</string>
    <string name="login_out">退出当前登录</string>
    <string name="me_person_info">个人信息</string>
    <string name="me_person_goods">我的商品</string>
    <string name="me_goods_upload">上传商品</string>
    <string name="nickname">用户昵称</string>
    <string name="hx_id">环信ID</string>
    <string name="username_update">用户名作为登录名不可以修改~</string>
    <string name="id_update">环信ID不可以修改~</string>
    <string name="nickname_rules">昵称为中文，字母或数字，长度为1~12，一个中文算2个长度</string>
    <string name="nickname_update">昵称修改</string>
    <string name="nickname_info">1.通过昵称添加好友,没有昵称无法添加好友 \n2.此昵称非用户名,在联系人和市场等场景显示</string>
    <string name="popu_album">相册</string>
    <string name="popu_camear">相机</string>
    <string name="popu_cancle">取消</string>
    <string name="search_address">搜索</string>
</resources>
