<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:layout_margin="@dimen/size_10dp"
    android:orientation="vertical"
    android:padding="@dimen/size_10dp"
    tools:ignore="Overdraw">

    <Button
        android:id="@+id/btn_popu_album"
        style="@style/AppTheme.Button.18master"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:text="@string/popu_album" />

    <Button
        android:id="@+id/btn_popu_camera"
        style="@style/AppTheme.Button.18master"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:text="@string/popu_camear" />

    <Button
        android:id="@+id/btn_popu_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginTop="@dimen/size_6dp"
        android:text="@string/popu_cancle"
        android:textColor="@color/whitesmoke"
        android:textSize="@dimen/size_20sp" />

</LinearLayout>

