<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/co_login_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageView
            android:id="@+id/login_back"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:layout_width="45dp"
            android:layout_height="45dp" />


        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:text="@string/str_login_register"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:textColor="#ffffff"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_login_title"
            android:textSize="20sp"
           android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/co_edit_bg"
        android:hint="@string/str_edit_username"
        android:paddingLeft="16dp" />

    <EditText
        android:id="@+id/login_userpass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@color/co_edit_bg"
        android:hint="@string/str_edit_password"
        android:paddingLeft="16dp" />


    <Button
        style="@style/AppTheme.Button.18master"
        android:id="@+id/btn_login"
        android:enabled="true"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:text="@string/str_login_title"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_find_password"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <!--<TextView-->
            <!--android:id="@+id/textView3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:text="@string/str_quick_login"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:textSize="15sp" />-->
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="———使用第三方账号登录———"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:weightSum="14">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/other1" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="微博" />

        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/other2" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="QQ" />

        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/other3" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="微信" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>